   replacements throughout the code) -- this will affect the UI libraries too
 - header files indentation uniformized; other little cleanups, e.g. some
   method parameter names made mode descriptive
Mar 28, 2000
 - SIM_API macro added to public classes and functions to export them on Windows
April 6-10, 2000
 - Changes to enable linking a Windows DLL from the library. Note that the
   sim dll and envir.dll mutually depend on each other, so first we must build
   an import library from one to be able to link dlls from them. Thus, first
   we create envir.ilib [ilib=import library], then we can link sim_std.dll,
   and using sim_std.ilib we can link envir.dll...
   On Unix we don't have this problem: .so files are not linked against other
   libs (they are treated more like a collection of object files), and the
   dynamic loader acts practically as a linker and collects the symbols at
   runtime from the different .so files.
Apr 10, 2000
 - TRUE/FALSE (defines) replaced by true/false (C++ keywords)
 - operator=(cXXX& other) functions now include the
      if (this==&other) return *this;
 - indentation canonized (4 spaces) in most files (where I had the patience)
 - remove(cObject *) added to cArray
 - cArray error handling improved
 - these functions were removed from cSimulation:
      int find(const char *modulename,int index=-1, int parentmod_id=-1);
      cModule *module(const char *modulename,int index=-1,int parentmod_id=-1);
      bool isUnique(const char *s);
   They are replaced by corresponding functions in cModule:
      int findSubmodule(const char *submodname, int idx=-1); // moduleID (or -1)
      cModule *submodule(const char *submodname, int idx=-1);
 - in printf() statements, all "%lf","%lg","%le" was replaced by "%f","%g","%e"
 - in cmodule.h, the old NEW and DELETE macros (for raw memory allocation) were
   renamed to opp_new and opp_free. (Beware when using opp_free: it does NOT
   call the destructor of the passed object!)
